[package]
name = "flemish"
version = "0.5.1"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
edition = "2021"
description = "An Elmish architecture for fltk-rs"
repository = "https://github.com/fltk-rs/flemish"
documentation = "https://docs.rs/flemish"
keywords = ["gui", "ui", "widgets", "bindings", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"
exclude = ["./examples"]

[dependencies]
fltk = { version = "1.4" }
fltk-theme = "0.7"
