[package]
name = "flemish"
version = "0.6.5"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
edition = "2021"
description = "An Elmish architecture for fltk-rs"
repository = "https://github.com/fltk-rs/flemish"
documentation = "https://docs.rs/flemish"
keywords = ["gui", "ui", "widgets", "bindings", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"
exclude = ["./examples"]

[dependencies]
fltk = "1.5"
fltk-theme = "0.7"
fltk-table = "0.3"
dyn-clone = "1"
tokio = {version = "1", features = ["rt-multi-thread"] }
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"
fxhash = "0.2"

[dev-dependencies]
anyhow = "1"