[package]
name = "flcsv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flemish = { path = "../../" }
csv = "^1.3"
serde = { version = "^1.0", features = ["derive"] }
lazy_static = "^1.4"
image = { version = "^0.25", default-features = false, features = ["jpeg"] }
