[package]
name = "dialect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flemish = { path = "../../" }
rmp-serde = { version="1.1" }
serde = { version="1.0", features = ["derive"] }
serde_json = "1"
ureq = { version = "2.9", features = ["json"] }
