[package]
name = "flresters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flemish = { path = "../../" }
serde = { version="1.0", features = ["derive"] }
rmp-serde = { version="1.1" }
ureq = { version = "2.9", features = ["json"] }
serde_json = "1"
json-tools = "1.1"
